tests/miniJava/neg/005659_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class static java { }
